##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	accountsservice.ch              \
	acpid.ch                        \
	at.ch                           \
	autofs.ch                       \
	autofs-kernel.ch                \
	autofs-optional-kernel.ch       \
	blocaled.ch                     \
	bluez.ch                        \
	bluez-kernel.ch                 \
	bubblewrap.ch                   \
	bubblewrap-kernel.ch            \
	colord.ch                       \
	cpio.ch                         \
	cups-pk-helper.ch               \
	dbus.ch                         \
	elogind.ch                      \
	elogind-kernel.ch               \
	elogind-test-kernel.ch          \
	fcron.ch                        \
	gpm.ch                          \
	gpm-kernel.ch                   \
	hdparm.ch                       \
	hwdata.ch                       \
	lm_sensors.ch                   \
	lm_sensors-kernel.ch            \
	logrotate.ch                    \
	lsb-tools.ch                    \
	mc.ch                           \
	modemmanager.ch                 \
	notification-daemon.ch          \
	p7zip.ch                        \
	pax.ch                          \
	pciutils.ch                     \
	pm-utils.ch                     \
	pm-utils-kernel.ch              \
	power-profiles-daemon.ch        \
	power-profiles-daemon-kernel.ch \
	raptor.ch                       \
	rasqal.ch                       \
	redland.ch                      \
	sg3_utils.ch                    \
	sysmon-qt.ch                    \
	sysstat.ch                      \
	systemd.ch                      \
	sysutils.ch                     \
	udisks2.ch                      \
	unrar.ch                        \
	unzip.ch                        \
	upower.ch                       \
	upower-systemd-kernel.ch        \
	usbutils.ch                     \
	which.ch                        \
	xdotool.ch                      \
	zip.ch

include $(top_srcdir)/build-aux/main.mk
