##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	applications.ch           \
	baobab.ch                 \
	brasero.ch                \
	dummy-apps.ch             \
	eog.ch                    \
        evince.ch                 \
	evolution.ch              \
	file-roller.ch            \
	gnome-calculator.ch       \
	gnome-color-manager.ch    \
	gnome-disk-utility.ch     \
	gnome-logs.ch             \
	gnome-maps.ch             \
	gnome-nettool.ch          \
	gnome-power-manager.ch    \
	gnome-screenshot.ch       \
	gnome-system-monitor.ch   \
	gnome-terminal.ch         \
	gnome-weather.ch          \
	gucharmap.ch              \
	seahorse.ch               \
	snapshot.ch               \
	vinagre.ch

include $(top_srcdir)/build-aux/main.mk
