##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	dconf.ch                     \
	dummy-desktop.ch             \
	dummy-platform.ch            \
	evolution-data-server.ch     \
	gcr.ch                       \
	gcr4.ch                      \
	geocode-glib.ch              \
	gexiv2.ch                    \
	gjs.ch                       \
	gnome-autoar.ch              \
	gnome-backgrounds.ch         \
	gnome-bluetooth.ch           \
	gnome-control-center.ch      \
	gnome-desktop.ch             \
	gnome-keyring.ch             \
	gnome-menus.ch               \
	gnome-online-accounts.ch     \
	gnome-session.ch             \
	gnome-settings-daemon.ch     \
	gnome-shell.ch               \
	gnome-shell-extensions.ch    \
	gnome-tweaks.ch              \
	gnome-user-docs.ch           \
	gnome-video-effects.ch       \
	grilo.ch                     \
	gsettings-desktop-schemas.ch \
	gsound.ch                    \
	gvfs.ch                      \
	libgdata.ch                  \
	libgee.ch                    \
	libgtop.ch                   \
	libgweather.ch               \
	libpeas.ch                   \
	libsecret.ch                 \
	libshumate.ch                \
	libwnck.ch                   \
	mutter.ch                    \
	nautilus.ch                  \
	platform.ch                  \
	rest.ch                      \
	tecla.ch                     \
	totem-pl-parser.ch           \
	tracker3.ch                  \
	tracker3-miners.ch           \
	vte.ch                       \
	yelp.ch                      \
	yelp-xsl.ch

include $(top_srcdir)/build-aux/main.mk
