##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	beyond.ch         \
	bootscripts.ch    \
	building-notes.ch \
	cgroup-kernel.ch  \
	important.ch      \
	la-files.ch       \
	libraries.ch      \
	locale-issues.ch  \
	patches.ch        \
	pkgmgt.ch         \
	position.ch       \
	systemd-units.ch

include $(top_srcdir)/build-aux/main.mk
