##
## This is part of BLFSbookja package.
##

CHANGE_FILES = \
	acknowledgments.ch    \
	askhelp.ch            \
	changelog.ch          \
	contact.ch            \
	conventions.ch        \
	conventions-kernel.ch \
	credits.ch            \
	maillists.ch          \
	mirrors.ch            \
	newsserver.ch         \
	packages.ch           \
	version.ch            \
	welcome.ch            \
	which.ch              \
	wiki.ch

include $(top_srcdir)/build-aux/main.mk
